Some editing; add Boethius quote to front page.

--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site settings
 title:
-  en: Ab Optimis Discamus
-  la: Ab Optimis Discamus
+  en: Respicite Caelum
+  la: Respicite Caelum
 email: gerardkeiser@gmail.com
 description:
   en: Reviews for Latin materials
