--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://discam.us" # the base hostname & protocol for your site
 twitter_username:
 github_username: Lactantius
+author:
+  name: Gerard Keiser
+  email: gerardkeiser@gmail.com
 
 # Build settings
 markdown: kramdown
