Reflect Latin home page change in config

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description:
   latine: De Rebus ad Latinam Discendam
 index:
   english:
-  latine: initium.html
+  latine: atrium.html
 feed:
   english: /feed.xml
   latine: /fluxus.xml
